--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Launchpad</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
+
+<body class="raleway">
     <header>
+        <nav class="background-img">
+
+            <ul>
+                <li class="nav-title "><a class="nav-title inter" href="">Logo</a></li>
+                <li><button class="btn-primary">Sign Up</button></li>
+            </ul>
+
+
+
+            <div class="banner">
+                <h1 class="banner-title">Cool Dark UI Template for Webflow Agencies!</h1>
+                <button class=" banner-btn btn-primary">Stay Focused</button>
+            </div>
+
+
+
+
+
+        </nav>
 
 
 
@@ -21,12 +53,13 @@
 
 
 
-        
+
     </footer>
-    
+
 
 
 
 
 </body>
+
 </html>
