--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
 
     </header>
     <main>
+        <section >
+        <div class="action-section">
+            <div class="action-description">
+                <h4 class="action-title">See It in Action</h4>
+
+                <p class="action-subtitle">Explore the live preview and imagine your brand in this bold new look.</p>
+                <button class="btn-primary">Launch Live Preview</button>
+            </div>
+            <div>
+                <img src="Assets/wc-mini.png" alt="">
+            </div>
+
+
+
+        </div>
+        </section>
 
 
 
