--- a/index.html
+++ b/index.html
@@ -60,6 +60,26 @@
 
         </div>
         </section>
+        <section class="productive-users-section ">
+            <h3 class="users-title">Joined Thousands of Productive Users</h3>
+            <div class="users-info .inter">
+                <div >
+                    <h3 class="users-subtitle">50K</h3>
+                    <p class="">Active Users</p>
+                </div>
+                <div>
+                    <h3 class="users-subtitle">2M+</h3>
+                    <p class="">Focus Sessions</p>
+                </div>
+                <div>
+                    <h3 class="users-subtitle">95%</h3>
+                    <p>Satisfaction Rate</p>
+                </div>
+            </div>
+            
+                    
+
+        </section>
 
 
 
