added rating section

--- a/index.html
+++ b/index.html
@@ -44,26 +44,27 @@
 
     </header>
     <main>
-        <section >
-        <div class="action-section">
-            <div class="action-description">
-                <h4 class="action-title">See It in Action</h4>
+        <section>
+            <div class="action-section">
+                <div class="action-description">
+                    <h4 class="action-title">See It in Action</h4>
 
-                <p class="action-subtitle">Explore the live preview and imagine your brand in this bold new look.</p>
-                <button class="btn-primary">Launch Live Preview</button>
+                    <p class="action-subtitle">Explore the live preview and imagine your brand in this bold new look.
+                    </p>
+                    <button class="btn-primary">Launch Live Preview</button>
+                </div>
+                <div>
+                    <img src="Assets/wc-mini.png" alt="">
+                </div>
+
+
+
             </div>
-            <div>
-                <img src="Assets/wc-mini.png" alt="">
-            </div>
-
-
-
-        </div>
         </section>
         <section class="productive-users-section ">
             <h3 class="users-title">Joined Thousands of Productive Users</h3>
             <div class="users-info .inter">
-                <div >
+                <div>
                     <h3 class="users-subtitle">50K</h3>
                     <p class="">Active Users</p>
                 </div>
@@ -76,9 +77,61 @@
                     <p>Satisfaction Rate</p>
                 </div>
             </div>
-            
-                    
 
+
+
+        </section>
+        <section class="rating-section">
+            <h3 class="rating-main-title">What our users say</h3>
+            <div class="rating">
+                <div class="rating-box">
+                    <p class="stars"> &#9733; &#9733; &#9733; &#9733; &#9733; </p>
+                    <h3 class="rating-title">Loved by Designers</h3>
+                    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="reviewer">
+
+
+                        <img src="Assets/avatar.png" alt="">
+                        <div>
+                            <p class="name">Reviewer name</p>
+                            <p class="date">Date</p>
+                        </div>
+
+
+                    </div>
+
+                </div>
+                <div class="rating-box">
+                    <p class="stars"> &#9733; &#9733; &#9733; &#9733; &#9733;</p>
+                    <h3 class="rating-title">Loved by Designers</h3>
+                    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="reviewer">
+
+
+                        <img src="Assets/avatar.png" alt="">
+                        <div>
+                            <p class="name">Reviewer name</p>
+                            <p class="date">Date</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="rating-box">
+                    <p class="stars"> &#9733; &#9733; &#9733; &#9733; &#9733;</p>
+                    <h3 class="rating-title">Loved by Designers</h3>
+                    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="reviewer">
+
+
+                        <img src="Assets/avatar.png" alt="">
+                        <div>
+                            <p class="name">Reviewer name</p>
+                            <p class="date">Date</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </section>
 
 
