added contact section and added star icons

--- a/index.html
+++ b/index.html
@@ -85,7 +85,12 @@
             <h3 class="rating-main-title">What our users say</h3>
             <div class="rating">
                 <div class="rating-box">
-                    <p class="stars"> &#9733; &#9733; &#9733; &#9733; &#9733; </p>
+                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    
                     <h3 class="rating-title">Loved by Designers</h3>
                     <p>This template instantly leveled up our presence.” – Studio Vertex</p>
                     <div class="reviewer">
@@ -102,7 +107,11 @@
 
                 </div>
                 <div class="rating-box">
-                    <p class="stars"> &#9733; &#9733; &#9733; &#9733; &#9733;</p>
+                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    <img class="stars" src="Assets/icon-star.png" alt="">
                     <h3 class="rating-title">Loved by Designers</h3>
                     <p>This template instantly leveled up our presence.” – Studio Vertex</p>
                     <div class="reviewer">
@@ -117,7 +126,13 @@
                     </div>
                 </div>
                 <div class="rating-box">
-                    <p class="stars"> &#9733; &#9733; &#9733; &#9733; &#9733;</p>
+                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    <img class="stars" src="Assets/icon-star.png" alt="">
+
+
                     <h3 class="rating-title">Loved by Designers</h3>
                     <p>This template instantly leveled up our presence.” – Studio Vertex</p>
                     <div class="reviewer">
@@ -132,6 +147,30 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="contact-section">
+
+
+            <h1 class="contact-title">Let’s Get in Touch</h1>
+
+            <div>
+                <label class="inter" for="email">Email</label>
+                <br>
+                <input type="email" placeholder="example@email.com" name="" id="email">
+                <br>
+                <label class="inter" for="name">Name</label>
+                <br>
+                <input type="text" placeholder="full name" name="" id="name">
+                <br>
+                <label class="inter" for="message">Message</label>
+                <br>
+                <textarea name="" placeholder="write your message..." cols="" id="message"></textarea>
+                <br>
+                <button class="contact-btn">Get In Touch</button>
+            </div>
+            </div>
+
+
         </section>
 
 
