--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 <body class="raleway">
     <header>
         <nav class="background-img">
-
             <ul>
                 <li class="nav-title "><a class="nav-title inter" href="">Logo</a></li>
                 <li><button class="btn-primary">Sign Up</button></li>
@@ -33,9 +32,6 @@
                 <h1 class="banner-title">Cool Dark UI Template for Webflow Agencies!</h1>
                 <button class=" banner-btn btn-primary">Stay Focused</button>
             </div>
-
-
-
 
 
         </nav>
@@ -56,8 +52,6 @@
                 <div>
                     <img src="Assets/wc-mini.png" alt="">
                 </div>
-
-
 
             </div>
         </section>
@@ -85,17 +79,19 @@
             <h3 class="rating-main-title">What our users say</h3>
             <div class="rating">
                 <div class="rating-box">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
-                    
+                    <div class="stars">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+
+                    </div>
+
                     <h3 class="rating-title">Loved by Designers</h3>
                     <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+
                     <div class="reviewer">
-
-
                         <img src="Assets/avatar.png" alt="">
                         <div>
                             <p class="name">Reviewer name</p>
@@ -107,13 +103,17 @@
 
                 </div>
                 <div class="rating-box">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    <div class="stars">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                    </div>
+
                     <h3 class="rating-title">Loved by Designers</h3>
                     <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+
                     <div class="reviewer">
 
 
@@ -126,18 +126,17 @@
                     </div>
                 </div>
                 <div class="rating-box">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
-                    <img class="stars" src="Assets/icon-star.png" alt="">
+                    <div class="stars">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
 
-
+                    </div>
                     <h3 class="rating-title">Loved by Designers</h3>
                     <p>This template instantly leveled up our presence.” – Studio Vertex</p>
                     <div class="reviewer">
-
-
                         <img src="Assets/avatar.png" alt="">
                         <div>
                             <p class="name">Reviewer name</p>
@@ -148,9 +147,8 @@
                 </div>
             </div>
         </section>
+
         <section class="contact-section">
-
-
             <h1 class="contact-title">Let’s Get in Touch</h1>
 
             <div>
@@ -168,16 +166,27 @@
                 <br>
                 <button class="contact-btn">Get In Touch</button>
             </div>
-            </div>
+
 
 
         </section>
 
 
-
-
     </main>
-    <footer>
+    <footer >
+        <h1 class=" footer-website-name  inter">LOGO</h1>
+        <p class="footer-subtitle">Ready to elevate your online presence? Contact us today to discuss your project and
+            discover how we can bring your vision to li
+        </p>
+        <div class="footer-list">
+            <ul>
+                <li><a href="">Home</a> </li>
+                <li><a href="">About</a></li>
+                <li><a href="">How It Works</a></li>
+                <li><a href="">Services</a></li>
+
+            </ul>
+        </div>
 
 
 
